# microservice-project

./: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  docker-compose.yaml
.github/workflows/: prod.yml
src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
