[package]
name = "microservice-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
clap = "4.4.2"
pbkdf2 = "0.12.2"
prost = "0.12.0"
rand_core = "0.6.4"
tokio = "1.32.0"
tonic = "0.10.0"
uuid = "1.4.1"

[build-dependencies]
tonic-build = "0.10.0"
